app/src/css/nav.css
.navigation ul {
	list-style-type: none;

	position: absolute;
	top: 0;
	left: 5%;

	margin: 0;
	padding: 0;
	padding-top: var(--section-margin);
	max-width: 10em;
}

.navigation li {
	padding: 0 0.5em;
	border: 0 solid var(--stronger-emphasis-bg);

	transition: all 0.3s linear;
	cursor: pointer;
}

.navigation li.current {
	border-left-width: 0.25em;
}

.navigation .anchor {
	float:right;
	position: relative;
	top: -0.25em;
}

.navigation .anchor svg {
	width: 0.5em;
	height: 0.5em;
	margin-left: 0.5em;
	fill: var(--anchor);
}

@media (max-width: 1150px) {
	.navigation {
		display: none;
	}
}

